--- a/contactUs.html
+++ b/contactUs.html
@@ -22,7 +22,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link mx-3" href="homePage.html">Home<span class="sr-only">(current)</span></a>
+          <a class="nav-link mx-3" href="index.html">Home<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle mx-3" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
